2011-09-18 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/qth-data.c
    Remove error message if latitude, longitude, or altitude is zero.


2011-09-07 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Update progress bar calculation for tle update.


2011-09-07 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Save status for new satellites.


2011-09-04 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Cleanup comments and code with satellite status updates.


2011-09-01 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * NEWS
    * src/tle-update.c
    * src/tle-update.h
    * src/gtk-sat-data.c
    Tracks operational status through tle-update and stores it in .sat files when available.
    Fixes Bug 3400534: Operational Status


2011-08-26 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-polar-view.h
    * src/gtk-polar-view.c
    Add hashes to support storing polar view sky track on and off.


2011-08-23 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-module.c
    Adds Event list to modules support in satellite reload and corrects some error messages.

2011-08-21 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Eliminates memory leak and cut and paste error and removes whitespace around tle before importing.

    * ChangeLog
    * src/gtk-sat-tree.c
    Eliminates use of deprecated tooltips code.

    * ChangeLog
    * TODO
    Updates TODO.

2011-08-20 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Updates satellite name and nickname if of form YYYY-NNNAAA indicating first TLE downloaded before celestrak used given name and improves error reporting.


2011-08-09 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Use newest tle available in file tle update.

    * ChangeLog
    * NEWS